force-app/main/default/objects/Product2/fields/Client_Segment__c.field-meta.xml
<CustomField>
    <fullName>Client_Segment__c</fullName>
    <label>Client Segment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>SME</fullName>
            </value>
            <value>
                <fullName>Personal Markets</fullName>
            </value>
            <value>
                <fullName>Bancassurance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>