force-app/main/default/objects/Product2/fields/ExternalCountry__c.field-meta.xml
<CustomField>
    <fullName>ExternalCountry__c</fullName>
    <description>SFP-9327 [1] Identifiers the country of origin for this record if it is external synched to Salesforce</description>
    <label>External Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ExternalCIFCountry</valueSetName>
    </valueSet>
</CustomField>