force-app/main/default/objects/Product2/fields/ExternalIdentifier__c.field-meta.xml
<CustomField>
    <fullName>ExternalIdentifier__c</fullName>
    <description>SFP-9327 [1] A unique 3-part external identifier for records external mastered (includes the country, system and id of the master record)</description>
    <externalId>true</externalId>
    <label>External Identifier</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>