force-app/main/default/objects/Product2/fields/ExternalSystemId__c.field-meta.xml
<CustomField>
    <fullName>ExternalSystemId__c</fullName>
    <description>SFP-9327 [1] 2 digit code that Identifiers the system of origin for this record if it is external mastered</description>
    <label>External System Id</label>
    <length>2</length>
    <type>Text</type>
</CustomField>