force-app/main/default/objects/Product2/fields/Product_Country__c.field-meta.xml
<CustomField>
    <fullName>Product_Country__c</fullName>
    <label>Product Country</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Countries</valueSetName>
    </valueSet>
</CustomField>