force-app/main/default/objects/Product2/fields/Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Product_Group__c</fullName>
    <description>SFP-9327 [c] Similar products are grouped together in a Product Group</description>
    <label>Product Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Acquiring</fullName>
            </value>
            <value>
                <fullName>Bancassurance</fullName>
            </value>
            <value>
                <fullName>Business Transactional Product</fullName>
            </value>
            <value>
                <fullName>Corporate Card</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Current Account</fullName>
            </value>
            <value>
                <fullName>Digital</fullName>
            </value>
            <value>
                <fullName>Global Markets</fullName>
            </value>
            <value>
                <fullName>Home Loans</fullName>
            </value>
            <value>
                <fullName>Loans</fullName>
            </value>
            <value>
                <fullName>Online Banking</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Personal Loans</fullName>
            </value>
            <value>
                <fullName>Personal Markets</fullName>
            </value>
            <value>
                <fullName>Savings &amp; Investments</fullName>
            </value>
            <value>
                <fullName>Structured Working Capital Finance</fullName>
                <isActive>false</isActive>
                <label>Structured Working Capital Finance</label>
            </value>
            <value>
                <fullName>SWCF</fullName>
            </value>
            <value>
                <fullName>Trade</fullName>
            </value>
            <value>
                <fullName>Trade Products</fullName>
            </value>
            <value>
                <fullName>VAF</fullName>
            </value>
            <value>
                <fullName>Vehicle and Asset Finance</fullName>
                <isActive>false</isActive>
                <label>Vehicle and Asset Finance</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>